NIFI-11271: This closes #7795. Removed deprecated Kerberos-related properties and updated to make use of KerberosUserService; some code cleanup to bring up-to-date with Java 21 recommendations such as Stream.toList() instead of Stream.collect(Collectors.toList()) and using enhanced switch statements
Signed-off-by: Joseph Witt <joewitt@apache.org>